--- a/data_taking_objects/templates/data_taking_objects/run.html
+++ b/data_taking_objects/templates/data_taking_objects/run.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
+
 {% block title %} Run {{ run.run_number }} {% endblock title %}
+
 
 {% block content %}
 
@@ -41,18 +43,10 @@
 
 {% endblock content %}
 
-{% block navbar_bottom %}
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
+{% block navbar_bottom_tabs %}
 
-  <span class="navbar-text">
-    Data Sources
-  </span>
-
-  <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-
-      {% if request.user.is_authenticated%}
 
       <li class="nav-item dropdown">
         <a class="nav-link dropup-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -65,11 +59,12 @@
         </div>
       </li>
 
-      {% endif %}
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          Additional information
+        </a>
+      </li>
 
     </ul>
-  </div>
 
-</nav>
-
-{% endblock navbar_bottom %}
+{% endblock navbar_bottom_tabs %}
