--- a/templates/navbar_bottom.html
+++ b/templates/navbar_bottom.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom px-4">
 
-  <a class="navbar-brand" href="">Data Sources</a>
+  <a class="navbar-brand">Data Sources</a>
 
   {% block navbar_bottom_tabs %}
   {% endblock navbar_bottom_tabs %} 
