Adding links to data sources in bottom navbar

--- a/data_taking_objects/templates/data_taking_objects/runs.html
+++ b/data_taking_objects/templates/data_taking_objects/runs.html
@@ -56,3 +56,29 @@
   </div>
 
 {% endblock content %}
+
+{% block navbar_bottom_tabs %}
+
+    <ul class="navbar-nav">
+
+      <li class="nav-item">
+        <a class="nav-link" href="https://cmsoms.cern.ch/cms/index/index">OMS</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="https://cmsrunregistry.web.cern.ch/offline/datasets/global">Run Registry</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="#">Histograms</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          Additional information
+        </a>
+      </li>
+
+    </ul>
+
+{% endblock navbar_bottom_tabs %}
