--- a/data_taking_objects/templates/data_taking_objects/run.html
+++ b/data_taking_objects/templates/data_taking_objects/run.html
@@ -48,15 +48,20 @@
 
     <ul class="navbar-nav">
 
-      <li class="nav-item dropdown">
-        <a class="nav-link dropup-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          OMS
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropup-item" href="https://cmsoms.cern.ch/cms/runs/report?cms_run={{run.run_number}}">Runs</a>
-          <a class="dropup-item" href="https://cmsoms.cern.ch/cms/triggers/l1_rates?cms_run={{run.run_number}}">L1 rates</a>
-          <a class="dropup-item" href="https://cmsoms.cern.ch/cms/triggers/hlt_trigger_rates?cms_run={{run.run_number}}">HLT rates</a>
-        </div>
+      <li class="nav-item">
+        <a class="nav-link">OMS</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="https://cmsoms.cern.ch/cms/runs/report?cms_run={{run.run_number}}">Runs</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="https://cmsoms.cern.ch/cms/triggers/l1_rates?cms_run={{run.run_number}}">L1 rates</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="https://cmsoms.cern.ch/cms/triggers/hlt_trigger_rates?cms_run={{run.run_number}}">HLT rates</a>
       </li>
 
       <li class="nav-item">
