--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,11 @@
         {% endblock %}
       </div>
 
-      {% include "navbar_bottom.html" %}
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom px-4">
+        <a class="navbar-brand">Data Sources</a>
+          {% block navbar_bottom_tabs %}
+          {% endblock navbar_bottom_tabs %}
+      </nav>
 
     </body>
 
