--- a/data_taking_objects/templates/data_taking_objects/runs.html
+++ b/data_taking_objects/templates/data_taking_objects/runs.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
+
 {% block title %} Runs {% endblock title %}
+
 
 {% block content %}
 
@@ -57,6 +59,7 @@
 
 {% endblock content %}
 
+
 {% block navbar_bottom_tabs %}
 
     <ul class="navbar-nav">
@@ -74,11 +77,29 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="#modalRuns" data-bs-toggle="modal" data-bs-target="#modalRuns">
           Additional information
         </a>
       </li>
 
     </ul>
 
+  <div class="modal fade" id="modalRuns" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Additional information</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Histograms were extracted from the ML4DQM csv files.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 {% endblock navbar_bottom_tabs %}
+
