--- a/templates/base.html
+++ b/templates/base.html
@@ -58,9 +58,37 @@
 
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom px-4">
         <a class="navbar-brand">Data Sources</a>
+
+          <ul class="navbar-nav">
+
           {% block navbar_bottom_tabs %}
           {% endblock navbar_bottom_tabs %}
+
+            <li class="nav-item">
+              <a class="nav-link" href="#modalRuns" data-bs-toggle="modal" data-bs-target="#modalRuns">
+                {% block modal_tab %} ... {% endblock modal_tab %}
+              </a>
+            </li>
+
+          </ul>
       </nav>
+
+      <div class="modal fade" id="modalRuns" tabindex="-1">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">{% block modal_title %} ... {% endblock modal_title %}</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <p> {% block modal_content %} ... {% endblock modal_content %} </p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
     </body>
 
