Renamed id for clarity

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
           {% endblock navbar_bottom_tabs %}
 
             <li class="nav-item">
-              <a class="nav-link" href="#modalRuns" data-bs-toggle="modal" data-bs-target="#modalRuns">
+              <a class="nav-link" href="#modalSources" data-bs-toggle="modal" data-bs-target="#modalSources">
                 {% block modal_tab %} ... {% endblock modal_tab %}
               </a>
             </li>
@@ -73,7 +73,7 @@
           </ul>
       </nav>
 
-      <div class="modal fade" id="modalRuns" tabindex="-1">
+      <div class="modal fade" id="modalSources" tabindex="-1">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
