--- a/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
+++ b/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
@@ -43,14 +43,17 @@ Histogram File Manager
 	<div id="app" >
 		<file-table
 			:files_information="files_information"
+			:results_count="results_count"
 								@file-actions-clicked="show_file_actions_modal"
 								:class="{dimmed: waiting_for_data}"
+			
 		>
 		</file-table>
 		<table-pagination
 			:page_next_url="page_next_url"
 						:page_previous_url="page_previous_url"
-						:total_pages="total_pages"
+							:total_pages="total_pages"
+							:current_page_number="current_page_number"
 						@clicked-previous="fetch_previous_result_page"
 						@clicked-next="fetch_next_result_page"
 						@clicked-specific-page="fetch_specific_result_page" 
