--- a/home/templates/home/login.html
+++ b/home/templates/home/login.html
@@ -1,7 +1,8 @@
-{%extends 'base.html'%}
-{%load static%}
+{% extends 'base.html' %}
+{% load static %}
+{% load socialaccount %}
 
-{%block title %} Login {%endblock title %}
+{% block title %} Login {% endblock title %}
 
 {% block content %}
 
@@ -12,6 +13,8 @@
     {{ form.as_p }}
     <input class ="btn btn-primary" type="submit" name="submit">
   </form>
+
+  <a href="{% provider_login_url 'cern' %}">Login w/ CERN</a>
 
 </div>
 
