--- a/templates/navbar_top.html
+++ b/templates/navbar_top.html
@@ -85,7 +85,7 @@
       </li>
 
       <li class="nav-item {%if request.path == path_to_logout%} active {% endif %}">
-        <a class="nav-link" href="{% url 'home:logout' %}">Logout</a>
+        <a class="nav-link" href="{% url 'home:logout' %}">Logout ({{user.username}})</a>
       </li>
 
       {% else %}
