--- a/home/templates/home/login.html
+++ b/home/templates/home/login.html
@@ -25,7 +25,8 @@
 <div class="container-fluid">
 	{% if user.is_authenticated %}
 	<div class="alert alert-primary" role="alert">
-		Hello {{ user.username }}! You are already logged in! <i class="bi bi-emoji-smile"></i>
+		Hello {% if user.first_name %}{{ user.first_name }}{% else %}{{user.username}}{% endif %}!
+		You are already logged in! <i class="bi bi-emoji-smile"></i>
 	</div>
 	{% else %}
 	<button class="btn btn-primary btn-cern"
