--- a/home/templates/home/login.html
+++ b/home/templates/home/login.html
@@ -53,11 +53,11 @@
 			{% csrf_token %}
 
 			{% if form.non_field_errors %}
-				<div class="alert alert-danger container-fluid">
-					{% for error in form.non_field_errors %}
-						<strong>{{ error|escape }}</strong>
-					{% endfor %}
-				</div>
+			<div class="alert alert-danger container-fluid">
+				{% for error in form.non_field_errors %}
+					<strong>{{ error|escape }}</strong>
+				{% endfor %}
+			</div>
 			{% endif %}
 
 			<!--{{ form.as_p }}-->
@@ -71,31 +71,37 @@
 				<label for="{{ form.password.id_for_label }}">Password</label>
 			</div>
 
-			<button class ="btn btn-outline-primary" type="submit" name="submit">Log in</button>
+			<button class ="btn btn-outline-primary col-12" type="submit" name="submit">Log in</button>
 		</form>
 
 		<hr>
-		<button class="btn btn-primary btn-cern"
-		onclick="window.location.href = '{% provider_login_url 'cern' %}'">
-			<div class="d-flex gap-2">
-				<img class="cern-svg" src="{% static 'img/LogoOutline-White.svg' %}" alt="CERN logo" style="height:3em;"/>
-				<div class="align-self-center">
-					<h6>Log in with CERN</h6>
+
+		<form action="{% provider_login_url 'cern' %}" method="post">
+			{% csrf_token %}
+			<button class="btn btn-primary btn-cern col-12" type="submit">
+				<div class="d-flex gap-2">
+					<img class="cern-svg" src="{% static 'img/LogoOutline-White.svg' %}" alt="CERN logo" style="height:3em;"/>
+					<div class="align-self-center">
+						<h6>Log in with CERN</h6>
+					</div>
 				</div>
-			</div>
-		</button>
+			</button>
+		</form>
+		<!-- Just in case we want to implement GitHub sign-in later. -->
 		<!--
-		<button class="btn btn-outline-primary btn-local" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_local_login">
-			<div class="d-flex gap-2">
-				<svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="currentColor" class="bi bi-person-badge" viewBox="0 0 16 16">
-					<path d="M6.5 2a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1h-3zM11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-					<path d="M4.5 0A2.5 2.5 0 0 0 2 2.5V14a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2.5A2.5 2.5 0 0 0 11.5 0h-7zM3 2.5A1.5 1.5 0 0 1 4.5 1h7A1.5 1.5 0 0 1 13 2.5v10.795a4.2 4.2 0 0 0-.776-.492C11.392 12.387 10.063 12 8 12s-3.392.387-4.224.803a4.2 4.2 0 0 0-.776.492V2.5z"/>
-				  </svg>
-				<div class="align-self-center">
-					<h6>Log in with a local account</h6>
+		<form action="{% provider_login_url 'github' %}" method="post">
+			{% csrf_token %}
+			<button class="btn btn-primary btn-dark col-12" type="submit">
+				<div class="d-flex gap-2">
+					<svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="white" class="bi bi-github" viewBox="0 0 16 16">
+						<path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+					</svg>
+					<div class="align-self-center">
+						<h6>Log in with GitHub</h6>
+					</div>
 				</div>
-			</div>
-		</button>
+			</button>
+		</form>
 		-->
 	</div>
 
