--- a/data_taking_objects/templates/data_taking_objects/runs.html
+++ b/data_taking_objects/templates/data_taking_objects/runs.html
@@ -7,7 +7,7 @@
 {% block content %}
 
   <div class="row">
-    <div class="col-9">
+    <div class="col-lg-9 col-12">
       <div>
         {% if error_message %}
           <div class="alert alert-warning d-flex align-items-center alert-dismissible fade show" role="alert">
@@ -59,7 +59,7 @@
 
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-lg-3 col-12">
       <div class="alert alert-info">
         <h4>Additional information - runs</h4>
         <hr>
