--- a/data_taking_certification/templates/data_taking_certification/lumisection_certification.html
+++ b/data_taking_certification/templates/data_taking_certification/lumisection_certification.html
@@ -6,7 +6,7 @@
 
 {% block content %}
   <div class="row">
-    <div class="col-9">
+    <div class="col-lg-9 col-12">
       <div class='container-fluid'>
 
       <div>
@@ -64,12 +64,14 @@
 
       </div>
     </div>
-    <div class="alert alert-info col-3">
-      <h4>Additional information - lumisections certification</h4>
-      <hr>
-      <p>
-        Per lumisection flag was obtained for all subdetectors / objects separately using the Run Registry. They were then merged into a single file which is used to fill the DB. The individual files can be found here: /afs/cern.ch/user/x/xcoubez/public/ML4DQM/json_XXX_subdetector_good.json (the name corresponds to the numbering scheme in the RR and the name of the subdetector/object) and the final file is the following: /afs/cern.ch/user/x/xcoubez/public/ML4DQM/LS_flags.pkl.
-      </p>
+    <div class="col-lg-3 col-12">
+      <div class="alert alert-info">
+        <h4>Additional information - lumisections certification</h4>
+        <hr>
+        <p>
+          Per lumisection flag was obtained for all subdetectors / objects separately using the Run Registry. They were then merged into a single file which is used to fill the DB. The individual files can be found here: /afs/cern.ch/user/x/xcoubez/public/ML4DQM/json_XXX_subdetector_good.json (the name corresponds to the numbering scheme in the RR and the name of the subdetector/object) and the final file is the following: /afs/cern.ch/user/x/xcoubez/public/ML4DQM/LS_flags.pkl.
+        </p>
+      </div>
     </div>
   </div>
 
