--- a/data_taking_objects/templates/data_taking_objects/run.html
+++ b/data_taking_objects/templates/data_taking_objects/run.html
@@ -7,7 +7,7 @@
 {% block content %}
 
   <div class="row">
-    <div class="col-9">
+    <div class="col-lg-9 col-12">
     <div>
       {% if error_message %}
         <div class="alert alert-warning d-flex align-items-center alert-dismissible fade show" role="alert">
@@ -43,7 +43,7 @@
 
     </div>
     </div>
-    <div class="col-3">
+    <div class="col-lg-3 col-12">
       <h4>More from OMS</h4>
       <hr>
       <ol>
