Forgot to import a new vue.js app component

--- a/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
+++ b/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
@@ -12,6 +12,7 @@
 <script src="{% static 'histogram_file_manager/js/components/file_actions.js' %}"></script>
 <script src="{% static 'histogram_file_manager/js/components/table_pagination.js' %}"></script>
 <script src="{% static 'histogram_file_manager/js/components/errors.js' %}"></script>
+<script src="{% static 'histogram_file_manager/js/components/success.js' %}"></script>
 
 <link rel="stylesheet" href="{% static 'histogram_file_manager/css/file_actions.css' %}">
 <link rel="stylesheet" href="{% static 'histogram_file_manager/css/histogram_file_manager.css' %}">
