Added 1D histogram visualisation

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,8 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon"/>
 
-
+    <!-- Plotly -->
+    <script src="https://cdn.plot.ly/plotly-2.16.1.min.js"></script>
 		
     {% block extra_head %}
     {% endblock %}
