--- a/histograms/templates/histograms/filter_lumisections_1d.html
+++ b/histograms/templates/histograms/filter_lumisections_1d.html
@@ -161,7 +161,7 @@
                             <div class="col-sm-6" style="margin-top: 10px">
                                 <a href="#" data-bs-toggle="tooltip" title="use CTRL + Click to select and deselect multiple titles" style="color:black;
         text-decoration: none;">Help</a>
-                                {% render_field filter.form.title|add_class:"form-control" %}
+                                {% render_field filter.form.title|add_class:"form-select" %}
                             </div>
                         </div>
                         
