--- a/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
+++ b/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
@@ -24,52 +24,50 @@ Histogram File Manager
 
 {% block content %}
 <div class="container-fluid">
-	<h1 class="my-3" align="center">Histogram File Manager</h1>
-	<h2>Available Histogram Files</h2>
-
 	<!-- Filter form, rendered by django -->
-	<p>
-		<button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#filters-collapse" aria-expanded="false" aria-controls="filters-collapse">
-			Filters
-		</button>
-	</p>
-	<div class="card border-light shadow p-3 bg-white rounded mb-4 collapse" id="filters-collapse">
-		<form id="file_filter_form" method="get" action="">
-			<div class="form-group">
-				{{ filter.form }}
+	<div class="row">
+		<div class="col-lg-3 col-12">
+			<h2>Histogram File Manager</h2>
+			<form id="file_filter_form" method="get" action="">
+				<div class="form-group">
+					{{ filter.form }}
+				</div>
+				<div class="d-grid">
+					<button type="submit" class="btn btn-primary mt-3">Apply filters</button>
+				</div>
+			</form>
+		</div>
+		<div class="col-lg-9 col-12">
+			<h4>Available Histogram Files</h4>
+			<!-- Vue js app -->
+			<div id="app" >
+				<file-table
+					:files_information="files_information"
+					:results_count="results_count"
+					@file-actions-clicked="show_file_actions_modal"
+					:class="{dimmed: waiting_for_data}"
+				>
+				</file-table>
+				<table-pagination
+					:page_next_url="page_next_url"
+								:page_previous_url="page_previous_url"
+									:total_pages="total_pages"
+									:current_page_number="current_page_number"
+								@clicked-previous="fetch_previous_result_page"
+								@clicked-next="fetch_next_result_page"
+								@clicked-specific-page="fetch_specific_result_page" 
+								:class="{dimmed: waiting_for_data}"
+				></table-pagination>
+				<file-actions
+					:file_information="file_information"
+					:is_visible="file_actions_is_visible"
+					:file_id="Number(file_information.id)"
+					:field_choices="{{field_choices}}"
+					@clicked-close="hide_file_actions_modal"
+				>
+				</file-actions>
 			</div>
-			<button type="submit" class="btn btn-primary mt-3">Apply filters</button>
-		</form>
-	</div>
-
-	<!-- Vue js app -->
-	<div id="app" >
-		<file-table
-			:files_information="files_information"
-			:results_count="results_count"
-			@file-actions-clicked="show_file_actions_modal"
-			:class="{dimmed: waiting_for_data}"
-			
-		>
-		</file-table>
-		<table-pagination
-			:page_next_url="page_next_url"
-						:page_previous_url="page_previous_url"
-							:total_pages="total_pages"
-							:current_page_number="current_page_number"
-						@clicked-previous="fetch_previous_result_page"
-						@clicked-next="fetch_next_result_page"
-						@clicked-specific-page="fetch_specific_result_page" 
-						:class="{dimmed: waiting_for_data}"
-		></table-pagination>
-		<file-actions
-			:file_information="file_information"
-			:is_visible="file_actions_is_visible"
-			:file_id="Number(file_information.id)"
-			:field_choices="{{field_choices}}"
-			@clicked-close="hide_file_actions_modal"
-		>
-		</file-actions>
+		</div>
 	</div>
 
 	</ul>	
