--- a/histograms/templates/histograms/listLumisectionHistos2D.html
+++ b/histograms/templates/histograms/listLumisectionHistos2D.html
@@ -12,24 +12,26 @@ lumisection 2D histograms
 {% block content %}
     {% load render_table from django_tables2 %}
     {% load bootstrap3 %}
-    <h1 class="my-3" align="center">2D Histograms for Lumisection based data</h1>
-    <div class="container">
-        {% if filter %}
-            {% include "histograms/filter_lumisections_2d.html" %}
-        {% else %}
-            <div class="alert alert-danger" role="alert">No Filter found.</div>
-        {% endif %}
-    </div>
 
-    {% if lumisectionHistos2D_table %}
-    <!-- div class="overflow-auto scrollbar border-light shadow m-1 bg-white" id="style-1"-->
-    <div class="overflow-auto px-3 bg-white" id="style-1">
-        {% render_table lumisectionHistos2D_table 'histograms/bootstrap.html'%}
+    <div class="row">
+        <div class="col-lg-3 col-12">
+            {% if filter %}
+                {% include "histograms/filter_lumisections_2d.html" %}
+            {% else %}
+                <div class="alert alert-danger" role="alert">No Filter found.</div>
+            {% endif %}
+        </div>
+        <div class="col-lg-9 col-12">
+            {% if lumisectionHistos2D_table %}
+            <!-- div class="overflow-auto scrollbar border-light shadow m-1 bg-white" id="style-1"-->
+            <div class="overflow-auto px-3 bg-white" id="style-1">
+                {% render_table lumisectionHistos2D_table 'histograms/bootstrap.html'%}
+            </div>
+            {% else %}
+                <div class="alert alert-danger" role="alert">No Table found.</div>
+            {% endif %}
+        </div>
     </div>
-    {% else %}
-        <div class="alert alert-danger" role="alert">No Table found.</div>
-    {% endif %}
-
 
 {% endblock content %}
 
