--- a/templates/navbar_top.html
+++ b/templates/navbar_top.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
+<nav class="navbar navbar-fixed-top navbar-expand-lg navbar-dark bg-dark px-4">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="/">
 			<img src="{% static 'img/favicon.png' %}" width="30" height="30" alt="" title="My Little Playground">
@@ -13,12 +13,49 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 
-				<li class="nav-item {%if request.path == path_to_home%} active {% endif %}">
-					<a class="nav-link" href="{% url 'home:home' %}">Home</a>
-				</li>
-
 				{% if request.user.is_authenticated%}
 
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Manage
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item" href="{% url 'histogram_file_manager:file_manager' %}">Histogram files</a>
+						<!--<hr class="dropdown-divider">-->
+						<a class="dropdown-item" href="{% url 'histograms:run-histograms-plots-view' %}">Run Histograms Plots</a>
+						<!-- This should go under Discover. -->
+						<!--
+						-->
+						<!--<hr class="dropdown-divider">-->
+						<a class="dropdown-item" href="{% url 'histograms:lumisections_1D_list' %}">1D Lumisection histograms</a>
+						<a class="dropdown-item" href="{% url 'histograms:lumisections_2D_list' %}">2D Lumisection Histograms</a>
+					</div>
+				</li>
+
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Discover
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item" href="{% url 'visualize_histogram:visualize' %}">Visualise histogram</a>
+						<a class="dropdown-item" href="{% url 'histograms:run-histograms-view' %}">Run Histograms</a>
+						<a class="dropdown-item" href="#">Movie</a>
+						<!--<hr class="dropdown-divider">-->
+					</div>
+				</li>
+
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Challenge
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item" href="#">Tasks</a>
+						<a class="dropdown-item" href="#">Your models</a>
+						<!--<hr class="dropdown-divider">-->
+					</div>
+				</li>
+
+				<!--
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						Granularity
@@ -82,6 +119,7 @@
 				<li class="nav-item {%if request.path == path_to_whatever%} active {% endif %}">
 					<a class="nav-link" href="{% url 'api:api-root' %}">APIs</a>
 				</li>
+				-->
 
 				{% endif %}
 			</ul>
