UI tweaks and cleanup

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
       {% include "navbar_top.html" %}
 
       <!-- Page Content -->
-      <div class='container container-main-page'>
+      <div class='container-fluid container-main-page'>
         {% block content %}
           Default Bootstrap Container.
         {% endblock %}
