--- a/visualize_histogram/templates/visualize_histogram/visualize_histogram.html
+++ b/visualize_histogram/templates/visualize_histogram/visualize_histogram.html
@@ -12,7 +12,7 @@ Visualize histograms
 
 {% block maincontent %}
 {% if data %}
-<div id="histogram-show" style="height: auto">
+<div id="histogram-show" style="height: 700px;">
     <script>
         var trace = {
             x: {{ bins }},
@@ -35,7 +35,7 @@ Visualize histograms
     </script>
 </div>
 {% elif data2d %}
-<div id="histogram-show" style="height: 700px">
+<div id="histogram-show" style="height: 700px;">
     <script>
         var data = [
             {
@@ -56,7 +56,7 @@ Visualize histograms
                 xref: 'paper',
                 x: 0
             }
-        });
+        }, {responsive: true});
     </script>
 </div>
 {% else %}
@@ -64,9 +64,9 @@ Visualize histograms
     <h2>No histogram found.</h2>
     Check the spelling of the above URL and try again. Based on the URL, here are the queries you have requested:
     <ol>
-        <li>Run: {{ runnr }}</li>
-        <li>Lumisection: {{ lumisection }}</li>
-        <li>Title: {{ title }}</li>
+        <li>Run: <code>{{runnr}}</code></li>
+        {% if lumisection %}<li>Lumisection: <code>{{lumisection}}</code></li>{% endif %}
+        <li>Title: <code>{{title}}</code></li>
     </ol>
 </div>
 {% endif %}
