--- a/templates/navbar_top.html
+++ b/templates/navbar_top.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav class="navbar navbar-fixed-top navbar-expand-lg navbar-dark bg-dark px-4">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="/">
 			<img src="{% static 'img/favicon.png' %}" width="30" height="30" alt="" title="My Little Playground">
