Relocated run histogram manager page

--- a/histograms/templates/histograms/listRunHistos1D.html
+++ b/histograms/templates/histograms/listRunHistos1D.html
@@ -15,11 +15,8 @@ Run histograms
     
     <div class="row">
         <div class="col-lg-3 col-12">
-            {% if filter %}
-                {% include "run_histos/filter.html" %}
-            {% else %}
-                <div class="alert alert-danger" role="alert">No Filter found.</div>
-            {% endif %}
+            <h2>Under construction</h2>
+            Please come back later.
         </div>
         <div class="col-lg-9 col-12">
             {% if runHistos_table %}
