--- a/templates/navbar_top.html
+++ b/templates/navbar_top.html
@@ -23,7 +23,7 @@
 					<div class="dropdown-menu shadow" aria-labelledby="navbarDropdown">
 						<a class="dropdown-item" href="{% url 'histogram_file_manager:file_manager' %}">Histogram files</a>
 						<!--<hr class="dropdown-divider">-->
-						<a class="dropdown-item" href="{% url 'histograms:run-histograms-plots-view' %}">Run Histograms</a>
+						<a class="dropdown-item" href="{% url 'histograms:runs_list' %}">Run Histograms</a>
 						<!-- This should go under Discover. -->
 						<!--
 						-->
