Fixed lumisection certification sidebar content.

--- a/data_taking_certification/templates/data_taking_certification/lumisection_certification.html
+++ b/data_taking_certification/templates/data_taking_certification/lumisection_certification.html
@@ -68,7 +68,7 @@
         <h4>Additional information - lumisections certification</h4>
         <hr>
         <p>
-          Per lumisection flag was obtained for all subdetectors / objects separately using the Run Registry. They were then merged into a single file which is used to fill the DB. The individual files can be found here: /afs/cern.ch/user/x/xcoubez/public/ML4DQM/json_XXX_subdetector_good.json (the name corresponds to the numbering scheme in the RR and the name of the subdetector/object) and the final file is the following: /afs/cern.ch/user/x/xcoubez/public/ML4DQM/LS_flags.pkl.
+          Per lumisection flag was obtained for all subdetectors / objects separately using the Run Registry. They were then merged into a single file which is used to fill the DB. The individual files can be found here: <code>/afs/cern.ch/user/x/xcoubez/public/ML4DQM/json_XXX_subdetector_good.json</code> (the name corresponds to the numbering scheme in the RR and the name of the subdetector/object) and the final file is the following: <code>/afs/cern.ch/user/x/xcoubez/public/ML4DQM/LS_flags.pkl</code>.
         </p>
       </div>
 {% endblock sidebar %}
